[package]
name = "self-test-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.8.0"
axum = {version =  "0.6.16", features = ["macros"]}
base64 = "0.13.1"
byteorder = "1.4.3"
chrono = "0.4.22"
ciborium = "0.2.0"
coset = "0.3.4"
crossbeam = "0.8.2"
flatbuffers = "2.1.2"
futures-util = "0.3.25"
hex = "0.4.3"
hyper = "0.14.26"
libc = "0.2"
ntp = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] }
sodium_sys = { git = "https://github.com/joinself/sodium-sys" }
tokio = { version = "1.23.0", features = ["full", "macros"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
tungstenite = "0.18.0"
