[package]
name = "self-test-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.8.0"
axum = {version =  "0.7.5", features = ["macros"]}
base64 = "0.13.1"
byteorder = "1.4.3"
chrono = "0.4.22"
ciborium = "0.2.0"
coset = "0.3.4"
crossbeam = "0.8.2"
flatbuffers = "24.3.25"
futures-util = "0.3.25"
hex = "0.4.3"
hyper = "0.14.26"
libc = "0.2"
ntp = "0.5.0"
postcard = { version = "1.0.8", features = ["alloc"] }
prost = { version = "0.12" }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] }
sha3 = "0.10.8"
sodium_sys = { git = "https://github.com/joinself/sodium-sys" }
tokio = { version = "1.37.0", features = ["full", "macros"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tonic = "0.11"
tower-http = {version = "0.5.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tungstenite = "0.21.0"

[build-dependencies]
tonic-build = "0.11"
